Add CNAME file for custom domain iiowoii.com

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:custom": "CUSTOM_DOMAIN=true vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build:custom",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
